# starter

./: CMakeLists.txt  README.md  run_build.sh
include/base/: Box.h  Context.h  Mat4.h  Memory.h  Vec3.h
include/engine/: Builder.h  Entity.h  Game.h  Types.h  World.h
include/game/: Player.h
include/renderer/: Mesh.h  Render.h  Shader.h  Texture.h
src/: main.c
src/base/: Box.c  Context.c  Mat4.c  Memory.c  Vec3.c
src/engine/: Builder.c  Entity.c  Game.c  World.c
src/game/: Player.c  main.c
src/renderer/: Mesh.c  Render.c  Shader.c  Texture.c
